[gd_scene load_steps=6 format=2]

[ext_resource path="res://Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://Ship.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/music.ogg" type="AudioStream" id=4]
[ext_resource path="res://World.gd" type="Script" id=5]
[ext_resource path="res://assets/gameover.png" type="Texture" id=6]

[node name="World" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="Ship" parent="." instance=ExtResource( 2 )]
position = Vector2( 500, 550 )

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="GameOver" type="TextureRect" parent="."]
visible = false
margin_left = 372.0
margin_top = 102.0
margin_right = 628.0
margin_bottom = 358.0
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="."]
margin_left = 121.0
margin_top = 7.0
margin_right = 166.0
margin_bottom = 21.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 87, -18 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SCORE:"

[node name="Score" type="Label" parent="."]
margin_left = 219.0
margin_top = 7.0
margin_right = 264.0
margin_bottom = 21.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 87, -18 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
